--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>E-Commerce Cart</title>
     <style>
-        body { font-family: Arial, sans-serif; background-color: #6f6f70; text-align: center; margin: 0; }
+        body { font-family: Arial, sans-serif; background-color: #c2c2cb; text-align: center; margin: 0; }
         .container { max-width: 900px; margin: auto; padding: 20px; }
         .products { display: flex; flex-wrap: wrap; justify-content: center; gap: 15px; }
         .product { border: 1px solid #9b0101; background: #fff; padding: 10px; text-align: center; border-radius: 5px; box-shadow: 0 0 5px rgba(0,0,0,0.1); width: 200px; }
@@ -23,14 +23,14 @@
 </head>
 <body>
     <div class="container">
-        <h2>Produk Kami</h2>
+        <h2>Products</h2>
         <div class="products" id="products"></div>
     </div>
     
-    <button class="cart-toggle" onclick="toggleCart()">🛒 Keranjang (<span id="cart-count">0</span>)</button>
+    <button class="cart-toggle" onclick="toggleCart()">🛒 Cart (<span id="cart-count">0</span>)</button>
     <div class="cart-sidebar" id="cart-sidebar">
         <div class="cart-header">
-            <h3>Keranjang Belanja</h3>
+            <h3>Cart</h3>
             <button onclick="toggleCart()">❌</button>
         </div>
         <ul id="cart-items" class="cart-items"></ul>
@@ -62,7 +62,7 @@
                 div.innerHTML = `
                     <img src="${product.image}" alt="${product.name}">
                     <p>${product.name} - Rp${product.price.toLocaleString()}</p>
-                    <button onclick="addToCart(this)">Tambah ke Keranjang</button>
+                    <button onclick="addToCart(this)">add to cart </button>
                 `;
                 productContainer.appendChild(div);
             });
